# Hope

./: .gitignore  README.md  example.py  pyproject.toml  test_hope.py  train.py
hope/: model.py  optimizers.py
hope/layers/: __init__.py
hope/modules/: __init__.py
src/: __init__.py  config.py  model.py
src/layers/: __init__.py  associative_memory.py  attentional_bias.py  miras_memory.py  neural_memory.py  retention_gates.py
src/modules/: __init__.py  continuum_memory.py  hope_block.py  titans.py
